task-aws/task-4/productionready-cluster/06-alb-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alb-controller
  template:
    metadata:
      labels:
        app: alb-controller
    spec:
      serviceAccountName: aws-load-balancer-controller
      containers:
      - name: controller
        image: amazon/aws-load-balancer-controller:v2.6.2
        args:
          - --cluster-name=prod-eks-private
          - --region=us-east-1
